--- a/src/index.scss
+++ b/src/index.scss
@@ -6,5 +6,24 @@
   @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
   body {
     font-family: 'DM Sans', sans-serif;
+    @apply bg-slate-900 font-body px-5 text-white;
+  }
+}
+
+@layer components {
+  .page-container {
+    max-width: 1280px;
+    @apply mx-auto;
+  }
+  .movie-list .swiper-slide {
+    width: 300px;
+    height: auto;
+  }
+  .banner .swiper {
+    height: 100%;
+  }
+  .movie-list .swiper,
+  .banner .swiper {
+    border-radius: 8px;
   }
 }
